[gd_scene load_steps=3 format=1]

[ext_resource path="res://Card.gd" type="Script" id=1]
[ext_resource path="res://sprites/00.png" type="Texture" id=2]

[node name="Card" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 300.0
script/script = ExtResource( 1 )
name = "Lunar New Year"
type = null

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 2 )
stretch_mode = 0

[connection signal="input_event" from="." to="." method="on_card_input_event"]

[connection signal="mouse_enter" from="." to="." method="on_card_mouse_enter"]

[connection signal="mouse_exit" from="." to="." method="on_card_mouse_exit"]


